# EPPIC

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  NOTICE  README.md  config.toml
.github/workflows/: cmake-ubuntu-latest.yml
scripts/: gen_xdmf.py  requirements.txt  setup_venv.sh
src/: main.cpp
src/constants/: numeric.h  physical.h  type.h
src/core/: config.cpp  config.h  coordinate.h  em_engine.cpp  em_engine.h  emengine.cpp  emengine.h  eppic.cpp  eppic.h  fdtd.cpp  fdtd.h  fdtd_engine.cpp  fdtd_engine.h  hdf5_wrapper.h  io.h  io_wrapper.h  numeric.h  physical.h  scalar.h  type.h  vector.h  world.cpp  world.h
src/fields/: coordinate.h  scalar.cpp  scalar.h  triplet.h  vector.h
src/logger/: logger.cpp  logger.h
